# MPI-k-means

./: .gitignore  CMakeLists.txt  Generate_data.ipynb  KDTree.hpp  README.md
include/: KDTree.hpp  MPI_utils.hpp  config.hpp  csv_utils.hpp  kmeans.hpp
script/: Collect_data.ipynb  Generate_data.ipynb  Visualize_data.ipynb  generate_data.py
src/: KDTree.cpp  MPI_utils.cpp  csv_utils.cpp  kmeans.cpp  main  main.cpp
test/: test_kdtree.cpp  test_parallel_clustering.cpp
